@@ -9,6 +9,9 @@ Changes since 4.0.3:
 * Add backtrace list to error messages in Debug mode
 * Add limit attribute to search_result_excerpt tag
 * Add escape and default attributes to custom_field tag
+* fix image-upload for outdated gdlib-installations
+* fix label attribute breadcrumb function
+* add if_author, if_article_author (with attribute 'name')
 
 Changes since 4.0.2:
 
